--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ urban_landscape_microbiome/.DS_Store
 urban_landscape_microbiome/.gitignore
 urban_landscape_microbiome/R/Writing
 urban_landscape_microbiome/R/Ecology_Forward_Reads.Rproj
+urban_landscape_microbiome/.git
